// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Requesting access on my plan Requesting access on my plan 1`] = `
<body
  style="overflow: hidden;"
>
  <div />
  <div>
    <div
      class="react-responsive-modal-root"
      data-testid="root"
    >
      <div
        aria-hidden="true"
        class="react-responsive-modal-overlay modal-overlay"
        data-testid="overlay"
        style="animation: react-responsive-modal-overlay-in 300ms;"
      />
      <div
        class="react-responsive-modal-container react-responsive-modal-containerCenter"
        data-testid="modal-container"
      >
        <div
          aria-modal="true"
          class="react-responsive-modal-modal"
          data-testid="modal"
          role="dialog"
          style="animation: react-responsive-modal-modal-in 300ms;"
          tabindex="-1"
        >
          <div>
            <div
              class="flex flex-col modal-container"
            >
              <div
                class="flex flex-row justify-between modal-header items-center relative"
              >
                <div
                  tabindex="1"
                />
                <img
                  alt="bcbst logo"
                  class="modal-icon modal-header-logo absolute m-auto left-0 right-0"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                <div
                  class="size-8 focus-icon"
                  tabindex="0"
                >
                  <img
                    alt="close"
                    class="size-4"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row flex-grow justify-center"
              >
                <div
                  class="flex flex-row justify-center modal-content"
                >
                  <div
                    class="flex flex-col items-center"
                  >
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                    />
                    <h2
                      class="title-2"
                    >
                      Request Access
                    </h2>
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                    />
                    <p
                      class="body-1 body-1 text-center"
                      style="display: block;"
                    >
                      You're requesting access to:
                    </p>
                    <div
                      class="flex flex-col w-[358px]"
                    >
                      <span
                        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                      />
                      <div
                        class="flex flex-col"
                      >
                        <p
                          class="body-1 body-1 text-center font-bold"
                          style="display: block;"
                        >
                          Forest Hall
                        </p>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                        />
                        <p
                          class="body-1 text-center"
                          style="display: block;"
                        >
                          We'll send an email requesting your access to their account to the email address we have on file for this member.
                        </p>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                        />
                      </div>
                      <button
                        aria-label="Send Request"
                        class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null font-bold active"
                        type="button"
                      >
                        Send Request
                      </button>
                      <span
                        style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                      />
                    </div>
                    <a
                      aria-label="Cancel"
                      style="display: block;"
                    >
                      <button
                        class="flex flex-row link-container undefined"
                        style="max-width: max-content; height: auto; display: block;"
                        tabindex="-1"
                        type="button"
                      >
                        <p
                          class="link undefined"
                        >
                          Cancel
                        </p>
                      </button>
                    </a>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row justify-center modal-footer"
              >
                <img
                  alt="bcbst logo"
                  class="modal-icon"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Requesting access on my plan Requesting access on my plan 2`] = `
<body
  style="overflow: hidden;"
>
  <div />
  <div>
    <div
      class="react-responsive-modal-root"
      data-testid="root"
    >
      <div
        aria-hidden="true"
        class="react-responsive-modal-overlay modal-overlay"
        data-testid="overlay"
        style="animation: react-responsive-modal-overlay-in 300ms;"
      />
      <div
        class="react-responsive-modal-container react-responsive-modal-containerCenter"
        data-testid="modal-container"
      >
        <div
          aria-modal="true"
          class="react-responsive-modal-modal"
          data-testid="modal"
          role="dialog"
          style="animation: react-responsive-modal-modal-in 300ms;"
          tabindex="-1"
        >
          <div>
            <div
              class="flex flex-col modal-container"
            >
              <div
                class="flex flex-row justify-between modal-header items-center relative"
              >
                <div
                  tabindex="1"
                />
                <img
                  alt="bcbst logo"
                  class="modal-icon modal-header-logo absolute m-auto left-0 right-0"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                <div
                  class="size-8 focus-icon"
                  tabindex="0"
                >
                  <img
                    alt="close"
                    class="size-4"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row flex-grow justify-center"
              >
                <div
                  class="flex flex-row justify-center modal-content"
                >
                  <div
                    class="flex flex-col items-center"
                  >
                    <img
                      alt="success"
                      class="size-[80px]"
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                      style="color: transparent;"
                      width="40"
                    />
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                    />
                    <h1
                      class="title-1 title-2"
                    >
                      Access Request Sent
                    </h1>
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                    />
                    <div
                      class="flex flex-col w-[358px]"
                    >
                      <div
                        class="flex flex-col items-center"
                      >
                        <p
                          class="body-1 text-center"
                          style="display: block;"
                        >
                          We've sent an email requesting your access. They will approve or deny this request and be able to set the level of access you have to their account.
                        </p>
                      </div>
                      <span
                        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                      />
                      <button
                        aria-label="Done"
                        class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null undefined"
                        type="button"
                      >
                        Done
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row justify-center modal-footer"
              >
                <img
                  alt="bcbst logo"
                  class="modal-icon"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
